--- a/shop/cart.html
+++ b/shop/cart.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Giỏ hàng</title>
-
-    <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-
-    <!-- CSS riêng -->
     <link href="style-cart.css" rel="stylesheet" />
   </head>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -72,8 +68,7 @@
         <p class="small mb-0">Thiết kế bởi Lilith Focalors 🌙</p>
       </div>
     </footer>
-
-    <!-- JS -->
+    <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="product-detail.js"></script>
   </body>
 </html>
