--- a/shop/product.html
+++ b/shop/product.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>LilithShop - Products</title>
-    <link href="/Shop/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="style-product.css" />
+
+<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+<link rel="stylesheet" href="style-product.css" />
+
   </head>
   <body style="background-color: #f8f9fa">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -317,8 +319,9 @@
     <footer class="bg-dark text-center text-white py-3 mt-auto">
       <p class="mb-0">&copy; 2025 LilithShop. All rights reserved.</p>
     </footer>
-    <script src="/Shop/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="product-detail.js"></script>
+
 
   </body>
 </html>
