--- a/shop/product.html
+++ b/shop/product.html
@@ -203,7 +203,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="/shop/image/office dress.jpg"width="100" height="300"
+              src="../shop/image/office dress.jpg"width="100" height="300"
               class="card-img-top"
               alt="Váy công sở"
             />
@@ -219,7 +219,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="/shop/image/hoodie.jpg"width="100" height="300"
+              src="../shop/image/hoodie.jpg"width="100" height="300"
               class="card-img-top"
               alt="Áo hoodie"
             />
@@ -235,7 +235,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="/shop/image/touser.jpg"width="100" height="300"
+              src="../shop/image/touser.jpg"width="100" height="300"
               class="card-img-top"
               alt="Quần tây nam"
             />
@@ -252,7 +252,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="/shop/image/croptop.jpg"width="100" height="300"
+              src="../shop/image/croptop.jpg"width="100" height="300"
               class="card-img-top"
               alt="Áo croptop"
             />
@@ -268,7 +268,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="/shop/image/men's jean.jpg"width="100" height="300"
+              src="../shop/image/men's jean.jpg"width="100" height="300"
               class="card-img-top"
               alt="Quần jeans nam"
             />
@@ -284,7 +284,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="/shop/image/evening dress.jpg"width="100" height="300"
+              src="../shop/image/evening dress.jpg"width="100" height="300"
               class="card-img-top"
               alt="Đầm dạ hội"
             />
@@ -300,7 +300,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="/shop/image/woman's sweater.jpg"width="100" height="300"
+              src="../shop/image/woman's sweater.jpg"width="100" height="300"
               class="card-img-top"
               alt="Áo len nữ"
             />
