--- a/shop/product.html
+++ b/shop/product.html
@@ -56,7 +56,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="../shop/image/ao thun .jpg" width="100" height="300"
+              src="image/ao thun .jpg" width="100" height="300"
               class="card-img-top"
               alt="Áo thun nam"
             />
@@ -72,7 +72,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="../shop/image/hodie bộ pc.jpg"width="100" height="300"
+              src="image/hodie bộ pc.jpg"width="100" height="300"
               class="card-img-top"
               alt="Hoodie anh mộ xum xuê"
             />
@@ -88,7 +88,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="../shop/image/jean nữ.jpg"width="100" height="300"
+              src="image/jean nữ.jpg"width="100" height="300"
               class="card-img-top"
               alt="Quần jeans nữ"
             />
@@ -104,7 +104,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="../shop/image/sơ mi trắng.jpg"width="100" height="300"
+              src="image/sơ mi trắng.jpg"width="100" height="300"
               class="card-img-top"
               alt="Áo sơ mi trắng"
             />
@@ -121,7 +121,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="../shop/image/jean jacket.jpg"width="100" height="300"
+              src="image/jean jacket.jpg"width="100" height="300"
               class="card-img-top"
               alt="Áo khoác jeans"
             />
@@ -138,7 +138,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="../shop/image/short.jpg"width="100" height="300"
+              src="image/short.jpg"width="100" height="300"
               class="card-img-top"
               alt="Quần short nam"
             />
@@ -154,7 +154,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="../shop/image/leather jacket.jpg"width="100" height="300"
+              src="image/leather jacket.jpg"width="100" height="300"
               class="card-img-top"
               alt="Áo khoác da"
             />
@@ -170,7 +170,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="../shop/image/long skirt.jpg"width="100" height="300"
+              src="image/long skirt.jpg"width="100" height="300"
               class="card-img-top"
               alt="Chân váy dài"
             />
@@ -187,7 +187,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="../shop/image/sweater.jpg"width="100" height="300"
+              src="image/sweater.jpg"width="100" height="300"
               class="card-img-top"
               alt="Áo sweater"
             />
@@ -203,7 +203,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="../shop/image/office dress.jpg"width="100" height="300"
+              src="image/office dress.jpg"width="100" height="300"
               class="card-img-top"
               alt="Váy công sở"
             />
@@ -219,7 +219,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="../shop/image/hoodie.jpg"width="100" height="300"
+              src="image/hoodie.jpg"width="100" height="300"
               class="card-img-top"
               alt="Áo hoodie"
             />
@@ -235,7 +235,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="../shop/image/touser.jpg"width="100" height="300"
+              src="image/touser.jpg"width="100" height="300"
               class="card-img-top"
               alt="Quần tây nam"
             />
@@ -252,7 +252,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="../shop/image/croptop.jpg"width="100" height="300"
+              src="image/croptop.jpg"width="100" height="300"
               class="card-img-top"
               alt="Áo croptop"
             />
@@ -268,7 +268,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="../shop/image/men's jean.jpg"width="100" height="300"
+              src="image/men's jean.jpg"width="100" height="300"
               class="card-img-top"
               alt="Quần jeans nam"
             />
@@ -284,7 +284,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="../shop/image/evening dress.jpg"width="100" height="300"
+              src="image/evening dress.jpg"width="100" height="300"
               class="card-img-top"
               alt="Đầm dạ hội"
             />
@@ -300,7 +300,7 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="card h-100 shadow-sm">
             <img
-              src="../shop/image/woman's sweater.jpg"width="100" height="300"
+              src="image/woman's sweater.jpg"width="100" height="300"
               class="card-img-top"
               alt="Áo len nữ"
             />
