--- a/shop/cart.html
+++ b/shop/cart.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Giỏ hàng</title>
     <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="style.css" rel="stylesheet" />
+    <link href="style-cart.css" rel="stylesheet" />
   </head>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
