--- a/shop/product-detail.html
+++ b/shop/product-detail.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LilithShop - Product's Detail</title>
-    <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="style.css" rel="stylesheet" />
+    <title>LilithShop - Product Detail</title>
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="style-detail.css" rel="stylesheet" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
@@ -37,15 +37,18 @@
         </div>
       </div>
     </nav>
+
     <main class="container my-5 product-detail">
       <div class="row g-4">
         <div class="col-md-6 text-center">
-          <img
-            id="product-image"
-            src=""
-            alt="Ảnh sản phẩm"
-            class="img-fluid rounded shadow-sm"
-          />
+          <div class="product-image-wrapper">
+            <img
+              id="product-image"
+              src=""
+              alt="Ảnh sản phẩm"
+              class="img-fluid rounded shadow-sm"
+            />
+          </div>
         </div>
         <div class="col-md-6 info-box">
           <h2 id="product-name" class="fw-bold mb-3"></h2>
@@ -72,13 +75,15 @@
         </div>
       </div>
     </main>
+
     <footer class="bg-dark text-light text-center py-2 mt-auto">
       <div class="container">
         <p class="mb-1">&copy; 2025 Lilith Shop</p>
         <p class="small mb-0">Thiết kế bởi Lilith Focalors 🌙</p>
       </div>
     </footer>
-    <script src="/Shop/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="product-detail.js"></script>
   </body>
 </html>
